hphp/hack/test/typecheck/global_const11.php.exp
File "global_const11.php", line 3, characters 11-19:
Invalid expression in constant initializer (Parsing[1002])
File "global_const11.php", line 3, characters 11-19:
Illegal constant value (Naming[2023])
